trying to fix zoom in problem on ios and added places and events.

--- a/components/SearchBox/Parts/PlacesInput/PlacesInput.module.scss
+++ b/components/SearchBox/Parts/PlacesInput/PlacesInput.module.scss
@@ -1,11 +1,8 @@
-.events {
+.places {
   display: grid;
-  grid-template-areas: "label" "selector";
+  grid-template-areas: "label" "places";
   grid-template-columns: 100%;
   grid-template-rows: 50% 50%;
-  height: 100%;
-  width: 100%;
-  grid-area: events;
   & label {
     grid-area: label;
     font-size: 2.5vh;
@@ -18,25 +15,16 @@
     position: relative;
     transform: translate(0, -50%);
   }
-  & select {
+  & input {
     font-size: 1em;
-    grid-area: selector;
     width: 80%;
     border: none;
-    border-bottom: solid 0.2vh black;
+    background: transparent;
     margin-left: 5%;
-    height: 7.5vw;
     position: relative;
+    border-bottom: solid 0.2vh black;
     top: 50%;
     transform: translate(0, -50%);
-    &:focus {
-      outline: none;
-    }
-
-    & optgroup {
-      & option {
-        font-size: 3.5vw;
-      }
-    }
+    height: 6.5vw;
   }
 }
