--- a/components/SearchBox/Parts/WhereInput/WhereInput.module.scss
+++ b/components/SearchBox/Parts/WhereInput/WhereInput.module.scss
@@ -3,15 +3,16 @@
   height: 100%;
   width: 100%;
   display: grid;
-  grid-template-areas: "label label" "text radius";
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 50% 50%;
+  grid-template-areas: "label" "text" "radius";
+  grid-template-columns: 100%;
+  grid-template-rows: calc(100% / 3) calc(100% / 3) calc(100% / 3);
   & label {
     grid-area: label;
-    font-size: 4vw;
+    font-size: 2.5vh;
     display: block;
     height: fit-content;
     width: fit-content;
+    font-weight: bold;
     margin-left: 5%;
     top: 50%;
     position: relative;
@@ -19,28 +20,32 @@
   }
   & input {
     grid-area: text;
-    font-size: 3.5vw;
+    font-size: 1em;
     width: 80%;
     border: none;
-    margin-left: 10%;
+    background: transparent;
+
+    margin-left: 5%;
     position: relative;
     border-bottom: solid 0.2vh black;
     top: 50%;
     transform: translate(0, -50%);
-    height: 6vw;
+    height: 6.5vw;
     &:focus {
       outline: none;
     }
   }
   & select {
     grid-area: radius;
-    font-size: 3.5vw;
+    font-size: 1em;
     width: 80%;
     border: none;
     border-bottom: solid 0.2vh black;
-    margin-left: 10%;
-    height: 6vw;
+    margin-left: 5%;
+    height: 6.5vw;
     position: relative;
+    background: transparent;
+
     top: 50%;
     transform: translate(0, -50%);
     &:focus {
@@ -49,7 +54,7 @@
 
     & optgroup {
       & option {
-        font-size: 3.5vw;
+        font-size: 1em;
       }
     }
   }
