--- a/components/SearchBox/SearchBox.module.scss
+++ b/components/SearchBox/SearchBox.module.scss
@@ -8,9 +8,9 @@
   box-shadow: 0 0.25vh 4vh #00000015;
   left: 50%;
   transform: translate(-50%);
-  grid-template-areas: "selector" "where" "when" ".";
+  grid-template-areas: "selector" "where" "when" "events" "places";
   grid-auto-columns: 100%;
-  grid-template-rows: 20% 20% 20% auto;
+  grid-template-rows: 20% 20% 20% 20% 20%;
   z-index: 2;
 }
 
