--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  font-size: 16px;
 }
 
 a {
